--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
 				<configuration>
 				  <source>1.8</source>
 				  <target>1.8</target>
@@ -238,11 +239,35 @@
 		<plugins>
             <!-- Default Site Pages -->
 			<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-project-info-reports-plugin</artifactId>
-			<version>2.8</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.8</version>
+				<reportSets>
+				  <reportSet>
+					<reports>
+					  <report>index</report>
+					  <report>summary</report>
+					  <report>license</report>
+  					  <report>dependencies</report>
+					  <report>project-team</report>
+
+					  <report>cim</report>
+					  <report>dependency-convergence</report>
+					  <report>dependency-info</report>
+					  <report>dependency-management</report>
+					  <report>distribution-management</report>
+					  <report>help</report>
+					  <report>issue-tracking</report>
+					  <report>mailing-list</report>
+					  <report>modules</report>
+					  <report>scm</report>
+					  <report>plugin-management</report>
+					  <report>plugins</report>
+					</reports>
+				  </reportSet>
+				</reportSets>
 			</plugin>
-			
+				
 			<!-- Java Documentation -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -250,12 +275,12 @@
 				<version>2.10.1</version>
 				<configuration>
 					<doctitle>My API for ${project.name} ${project.version}</doctitle>
-			        <windowtitle>My API for ${project.name} ${project.version}</windowtitle>
+					<windowtitle>My API for ${project.name} ${project.version}</windowtitle>
 					
-			        <testDoctitle>My Test API for ${project.name} ${project.version}</testDoctitle>
-			        <testWindowtitle>My Test API for ${project.name} ${project.version}</testWindowtitle>
+					<testDoctitle>My Test API for ${project.name} ${project.version}</testDoctitle>
+					<testWindowtitle>My Test API for ${project.name} ${project.version}</testWindowtitle>
 					<show>private</show>
-				  	<failOnError>false</failOnError>
+					<failOnError>false</failOnError>
 				</configuration>
 				<reportSets>
 				  <reportSet>
@@ -267,16 +292,16 @@
 				</reportSets>
 			</plugin>
 		
-           <!-- Source Code Cross-Reference -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.5</version>
+		   <!-- Source Code Cross-Reference -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.5</version>
 				<configuration>
 				  <linkJavadoc>true</linkJavadoc>
 				  <javadocDir>${basedir}/target/site/apidocs/</javadocDir>
 				</configuration>				
-            </plugin>
+			</plugin>
 		
 		</plugins>
     </reporting>
