--- a/pom.xml
+++ b/pom.xml
@@ -271,7 +271,7 @@
 			        </execution>
 			    </executions>
 			    <configuration>
-			        <baseDir>http://localhost:${jasmine.serverPort}</baseDir>
+			        <baseDir>http://localhost:8234</baseDir>
 			        <outputDir>${project.build.directory}/saga-coverage</outputDir>
 			        <noInstrumentPatterns>
 			            <pattern>.*/spec/.*</pattern>
