--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 		<maven>3.2.5</maven>
 	</prerequisites>
   
+	<properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<!-- More Project Information -->
 	<name>Nutshell Communication Library</name>
 	<description>The Nutshell Communication Library is designed for network communication by using the messaging communication-style. It's a higher-level framework, where the application developer defines an application protocol by XML and code the corresponding messages and event handling. The library hides transport details from the developer.</description>
