--- a/pom.xml
+++ b/pom.xml
@@ -245,7 +245,20 @@
 		        <autoReleaseAfterClose>true</autoReleaseAfterClose>
 		      </configuration>
 		    </plugin>
-            
+	                <plugin>
+			      <groupId>org.apache.maven.plugins</groupId>
+			      <artifactId>maven-gpg-plugin</artifactId>
+			      <version>1.5</version>
+			      <executions>
+			        <execution>
+			          <id>sign-artifacts</id>
+			          <phase>verify</phase>
+			          <goals>
+			            <goal>sign</goal>
+			          </goals>
+			        </execution>
+			      </executions>
+			    </plugin>
 			<!-- Reporting: mvn site:run -->
 		    <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
