--- a/pom.xml
+++ b/pom.xml
@@ -253,7 +253,10 @@
 			      <groupId>org.apache.maven.plugins</groupId>
 			      <artifactId>maven-gpg-plugin</artifactId>
 			      <version>1.5</version>
-			      <executions>
+				 <configuration>
+				        <skip>true</skip>
+				 </configuration>
+			       <executions>
 			        <execution>
 			          <id>sign-artifacts</id>
 			          <phase>verify</phase>
