--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,18 @@
 			</plugin>
 			<!-- travis -->
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.2</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+			<!-- travis -->
+			<plugin>
 			    <groupId>com.github.timurstrekalov</groupId>
 			    <artifactId>saga-maven-plugin</artifactId>
 			    <version>1.5.2</version>
@@ -437,7 +449,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.6</version>
+				<version>2.5.2</version>
 				<configuration>
 					<formats>
 						<format>html</format>
