--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ language: java
 notifications:
   email: false
 after_success:
-  - mvn clean test saga:coverage cobertura:cobertura coveralls:report
+  - mvn clean test jacoco:report saga:coverage coveralls:report
+# REMOVED cobertura:cobertura
