--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
 	       <artifactId>kryo</artifactId>
 		   <version>3.0.0</version>
     	</dependency>		
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 	</dependencies>
   
 	<!-- Build Settings -->
@@ -304,6 +309,7 @@
 			    </executions>
 			</plugin>
 			<!-- travis -->
+<!-- NOT STABLE
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -313,8 +319,10 @@
 						<format>html</format>
 						<format>xml</format>
 					</formats>
+					<maxmem>256m</maxmem>
 				</configuration>
 			</plugin>
+-->			
 			<!-- travis -->
 			<plugin>
 			    <groupId>com.github.timurstrekalov</groupId>
@@ -445,6 +453,7 @@
 			    <artifactId>jacoco-maven-plugin</artifactId>
 			    <version>0.7.2.201409121644</version>
 			</plugin>
+<!-- NOT STABLE
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -457,7 +466,7 @@
 					</formats>
 				</configuration>
 			</plugin>
-	
+-->
 		</plugins>
     </reporting>
 </project>
