--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,10 @@
-﻿<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- Maven Coordinates -->
 	<groupId>de.serviceflow</groupId>
 	<artifactId>nutshell-communicate</artifactId>
-	<version>0.3</version>
+	<version>0.6-SNAPSHOT</version>
   	<packaging>pom</packaging>
 
 	<prerequisites>
@@ -23,7 +20,8 @@
 	  <connection>scm:git:https://github.com/olir/nutshell-communicate.git</connection>
 	  <developerConnection>scm:git:https://github.com/olir/nutshell-communicate.git</developerConnection>
 	  <url>https://github.com/olir/nutshell-communicate.git</url>
-	</scm>
+	  <tag>HEAD</tag>
+  </scm>
 	
 	<distributionManagement>
 	  <snapshotRepository>
@@ -32,7 +30,7 @@
 	  </snapshotRepository>
 	  <repository>
 	    <id>ossrh</id>
-	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 	  </repository>
 	</distributionManagement>
 
@@ -266,7 +264,7 @@
 			      <artifactId>maven-gpg-plugin</artifactId>
 			      <version>1.5</version>
 				 <configuration>
-				        <skip>true</skip>
+				        <skip>false</skip>
 				 </configuration>
 			       <executions>
 			        <execution>
@@ -278,6 +276,34 @@
 			        </execution>
 			      </executions>
 			    </plugin>
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-source-plugin</artifactId>
+				  <version>2.2.1</version>
+				  <executions>
+					<execution>
+					  <id>attach-sources</id>
+					  <goals>
+						<goal>jar-no-fork</goal>
+					  </goals>
+					</execution>
+				  </executions>
+				</plugin>
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-javadoc-plugin</artifactId>
+				  <version>2.10.1</version>
+				  <executions>
+					<execution>
+					  <id>attach-javadocs</id>
+					  <goals>
+						<goal>jar</goal>
+					  </goals>
+					</execution>
+				  </executions>
+				</plugin>
+				
+				
 			<!-- Reporting: mvn site:run -->
 		    <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -375,7 +401,7 @@
         								</goals>
         							</pluginExecutionFilter>
         							<action>
-        								<ignore></ignore>
+        								<ignore />
         							</action>
         						</pluginExecution>
         					</pluginExecutions>
