--- a/pom.xml
+++ b/pom.xml
@@ -248,17 +248,6 @@
             </plugin>
             
 			<!-- release -->
-		    <plugin>
-		      <groupId>org.sonatype.plugins</groupId>
-		      <artifactId>nexus-staging-maven-plugin</artifactId>
-		      <version>1.6.3</version>
-		      <extensions>true</extensions>
-		      <configuration>
-		        <serverId>ossrh</serverId>
-		        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-		        <autoReleaseAfterClose>false</autoReleaseAfterClose>
-		      </configuration>
-		    </plugin>
 	                <plugin>
 			      <groupId>org.apache.maven.plugins</groupId>
 			      <artifactId>maven-gpg-plugin</artifactId>
@@ -276,6 +265,26 @@
 			        </execution>
 			      </executions>
 			    </plugin>
+		    <plugin>
+		      <groupId>org.sonatype.plugins</groupId>
+		      <artifactId>nexus-staging-maven-plugin</artifactId>
+		      <version>1.6.3</version>
+		      <extensions>true</extensions>
+			<executions>
+					<execution>
+					  <id>default-deploy</id>
+					  <phase>deploy</phase>
+					  <goals>
+						<goal>deploy</goal>
+					  </goals>
+					</execution>
+				  </executions>			  
+		      <configuration>
+		        <serverId>ossrh</serverId>
+		        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+		        <autoReleaseAfterClose>false</autoReleaseAfterClose>
+		      </configuration>
+		    </plugin>
 				<plugin>
 				  <groupId>org.apache.maven.plugins</groupId>
 				  <artifactId>maven-source-plugin</artifactId>
