--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<!-- Maven Coordinates -->
 	<groupId>de.serviceflow</groupId>
 	<artifactId>nutshell-communicate</artifactId>
-	<version>0.6.2-STAGING</version>
+	<version>0.6.4</version>
   	<packaging>pom</packaging>
 
 	<prerequisites>
@@ -282,7 +282,7 @@
 		      <configuration>
 		        <serverId>ossrh</serverId>
 		        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-		        <autoReleaseAfterClose>false</autoReleaseAfterClose>
+		        <autoReleaseAfterClose>true</autoReleaseAfterClose>
 		      </configuration>
 		    </plugin>
 				<plugin>
